@@ -1475,8 +1475,79 @@ r_int
 id|mode
 )paren
 (brace
-multiline_comment|/* mode is currently ignored. FIXME? */
+r_switch
+c_cond
+(paren
+id|mode
+)paren
+(brace
+singleline_comment|// For these modes we should switch to EPP mode:
+r_case
+id|IEEE1284_MODE_EPP
+suffix:colon
+r_case
+id|IEEE1284_MODE_EPPSL
+suffix:colon
+r_case
+id|IEEE1284_MODE_EPPSWE
+suffix:colon
 r_return
+(paren
+id|cpp_daisy
+(paren
+id|port
+comma
+l_int|0x20
+op_plus
+id|daisy
+)paren
+op_amp
+id|PARPORT_STATUS_ERROR
+)paren
+suffix:semicolon
+singleline_comment|// For these modes we should switch to ECP mode:
+r_case
+id|IEEE1284_MODE_ECP
+suffix:colon
+r_case
+id|IEEE1284_MODE_ECPRLE
+suffix:colon
+r_case
+id|IEEE1284_MODE_ECPSWE
+suffix:colon
+r_return
+(paren
+id|cpp_daisy
+(paren
+id|port
+comma
+l_int|0xd0
+op_plus
+id|daisy
+)paren
+op_amp
+id|PARPORT_STATUS_ERROR
+)paren
+suffix:semicolon
+singleline_comment|// Nothing was told for BECP in Daisy chain specification.
+singleline_comment|// May be it&squot;s wise to use ECP?
+r_case
+id|IEEE1284_MODE_BECP
+suffix:colon
+singleline_comment|// Others use compat mode
+r_case
+id|IEEE1284_MODE_NIBBLE
+suffix:colon
+r_case
+id|IEEE1284_MODE_BYTE
+suffix:colon
+r_case
+id|IEEE1284_MODE_COMPAT
+suffix:colon
+r_default
+suffix:colon
+r_return
+(paren
 id|cpp_daisy
 (paren
 id|port
@@ -1487,7 +1558,9 @@ id|daisy
 )paren
 op_amp
 id|PARPORT_STATUS_ERROR
+)paren
 suffix:semicolon
+)brace
 )brace
 DECL|function|mux_present
 r_static
